created all javadoc strings